--- a/type-styles/style.css
+++ b/type-styles/style.css
@@ -40,17 +40,21 @@ header {
 
 .group {
     margin-bottom: 50px;
-    border: 1px solid #242e80;
-    border-radius: 20px;
-    width: 50%;
-    margin: 0 auto 50px auto;
+    width: 60%;
+    margin: 0 auto 70px auto;
+}
+
+hr {
+    border: .2px solid #737399;
+    width: 85%;
+
 }
 
 .sample {
     background-color: #2e3a75;
     padding: 15px;
     border-radius: 20px;
-    width: 35%;
+    width: 45%;
     margin: 2rem auto;
     box-shadow: 5px 5px #7471b0;
 }
