finished techniques assignment

--- a/exercises/responsive-design-techniques/styles.css
+++ b/exercises/responsive-design-techniques/styles.css
@@ -13,6 +13,11 @@ body {
     h1 {
         font-size: 2.5rem;
     }
+
+    #second-container li {
+        width: 25%;
+    }
+
 }
 
 @media only screen and (max-width: 500px) {
@@ -21,15 +26,37 @@ body {
     }
 }
 
-#grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
+#first-container {
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
     padding-left: 0;
 }
 
-aside {
+#first-container aside {
     width: 170px;
     margin: 10px;
     font-size: 0.8rem;
+}
+
+#second-container {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding-left: 0;
+    margin: -10px 1rem -10px 1rem;
+}
+
+#second-container li {
+    width: 100%;
+}
+
+#second-container aside {
+    margin: 10px;
+}
+
+@media only screen and (min-width: 480px) {
+    #second-container li {
+        width: 50%;
+    }
 }
