--- a/buttons/styles.css
+++ b/buttons/styles.css
@@ -86,6 +86,7 @@ a#btn-spotify:hover {
     background-image: none;
     transform: translateX(-10%);
 }
+
 #btn-lyft img {
     margin: auto;
     width: 0;
@@ -239,6 +240,38 @@ a#btn-spotify:hover {
     transform: scale(2.3);
     background-image: url(images/hasbro-color-bg.png);
 
+}
+
+#btn-tesla {
+    display: inline-block;
+    position: relative;
+    width: 50%;
+    height: 85px;
+    margin: auto;
+    margin-top: 100px;
+    background-image: url("images/tesla-icon.webp");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#btn-tesla:hover {
+    background-size: 40px;
+    background-position: left;
+    transform: translateX(-15%);
+    transition: .5s ease;
+}
+
+#btn-tesla img {
+    width: 0%;
+    position: absolute;
+    left: 30px;
+    height: 100px;
+}
+
+#btn-tesla:hover img {
+    width: 100%;
+    transition: .5s ease;
 }
 
 
