added craigslist button

--- a/buttons/styles.css
+++ b/buttons/styles.css
@@ -293,3 +293,36 @@ a#btn-spotify:hover {
     background-color: #3b441a;
     color: #a9a476;
 }
+
+
+#craig-container {
+    position: relative;
+}
+
+#btn-craig {
+    display: inline-block;
+    width: 60%;
+    margin-top: 50px;
+    height: 160px;
+}
+
+#btn-craig .fa-bounce {
+    opacity: 0;
+}
+
+#btn-craig .fa-peace {
+    position: absolute; 
+    left: 30%;
+    top: 30%;
+    width: fit-content;
+    color: rgb(99, 30, 236);
+}
+#btn-craig:hover #original-peace {
+    opacity: 0;
+}
+
+#btn-craig:hover .fa-bounce {
+    transition: color .3s;
+    color: rgb(108, 101, 246);
+    opacity: 1;
+}
