--- a/buttons/styles.css
+++ b/buttons/styles.css
@@ -326,3 +326,26 @@ a#btn-spotify:hover {
     color: rgb(108, 101, 246);
     opacity: 1;
 }
+
+
+
+#btn-hsn {
+    background-image: url("images/hsn-logo.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: none;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    margin-top: 10px;
+    transition: .4s ease;
+    border: 0px solid white;
+    border-radius: 250px;
+}
+
+#btn-hsn:hover {
+    background-image: url("images/hsn-logo-white.png");
+    border: 5px solid #2781f8;
+    border-radius: 250px;
+}
