--- a/microsite/final/styles.css
+++ b/microsite/final/styles.css
@@ -28,6 +28,9 @@
   color: #51D5B6;
 }
 
+a {
+  text-decoration: none;
+}
 body {
   margin: 0;
   padding: 0;
@@ -89,7 +92,7 @@ p {
   font-size: 1.2em;
   line-height: 1.7;
   margin-bottom: 15px;
-  max-width: 800px;
+  max-width: 100%;
 }
 
 
@@ -101,6 +104,7 @@ p {
   padding: 40px;
   overflow: auto;
   position: relative;
+  display: flow-root;
 }
 
 .container-home:first-of-type {
@@ -123,6 +127,7 @@ p {
   padding: 40px;
   filter: drop-shadow(8px 8px #1D3243);  
   position: relative;
+  display: flow-root;
 }
 
 .container-history:nth-of-type(odd) {
@@ -373,7 +378,7 @@ p {
   font-size: 1.2em;
   line-height: 1.7;
   margin: 0;
-  max-width: 900px;
+  max-width: 100%;
 }
 
 .featured-designers {
@@ -606,6 +611,7 @@ p {
   margin-bottom: 35px;
   filter: drop-shadow(8px 8px #1D3243);
   border-top: 8px solid;
+  display: flow-root;
 }
 
 .collector-card:nth-child(odd) {
